<resources>
    <string name="app_name">BigNews</string>

    <string name="shareTo">分享到</string>

    <string name="nointeresting">不感兴趣</string>

    <string name="interestingSum">人感兴趣</string>

    <string name="aboutthis">相关新闻</string>
    <string name="send">发送</string>
    <string name="myread">我的订阅</string>
    <string name="viewmore">查看更多</string>
    <string name="strInputAccHint">输入帐号</string>
    <string name="strAccInputLabel">帐号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="opt_remember">记住密码</string>
    <string name="login">登 录</string>
    <string name="opt_hideLogin">隐身登录</string>
    <string name="opt_silent">静音登录</string>
    <string name="opt_openVibra">开启振动</string>
    <string name="opt_acceptGroupMsg">接收群消息</string>
</resources>
