<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="15dp"
    android:paddingTop="15dp"
    android:paddingRight="15dp"
    android:background="@color/colorcontentbg"
    tools:context="com.read.activity.ReadContentActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/edit_pinglun"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorcontentbg">

            <TextView
                android:id="@+id/tv_readcontent_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="新闻标题"
                android:textSize="25sp"
                android:textStyle="bold"
                android:background="@color/colorcontentbg"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorcontentbg"
                >

                <TextView
                    android:id="@+id/tv_readcontent_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="GodInBigNews"
                    android:textColor="@color/colorWYRed" />

                <TextView
                    android:id="@+id/tv_readcontent_upLoadTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1900年1月1日" />

            </LinearLayout>


            <WebView
                android:id="@+id/webview_readcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </WebView>

            <RelativeLayout
                android:id="@+id/rl_rupportOrtread"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/colorcontentbg">

                <RadioButton
                    android:button="@null"
                    android:id="@+id/rbtn_readcontent_support"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/readcontent_support_btn"
                    android:padding="18dp"
                    android:scaleType="fitCenter"
                     />

                <RadioButton
                    android:button="@null"
                    android:id="@+id/rbtn_readcontent_tread"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="20dp"
                    android:layout_toRightOf="@+id/rbtn_readcontent_support"
                    android:background="@drawable/readcontent_tread_btn"
                    android:padding="18dp"
                    android:scaleType="fitCenter"
                     />

                <TextView
                    android:id="@+id/tv_readcontent_supportSum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/rbtn_readcontent_support"
                    android:layout_below="@+id/rbtn_readcontent_support"
                    android:layout_marginTop="-10dp"
                    android:gravity="right"
                    android:textColor="@color/colorTextNormal"
                    android:text="222" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rbtn_readcontent_support"
                    android:layout_marginTop="-10dp"
                    android:layout_toRightOf="@+id/tv_readcontent_supportSum"
                    android:gravity="left"
                    android:textColor="@color/colorTextNormal"
                    android:text="@string/interestingSum" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/rbtn_readcontent_tread"
                    android:layout_alignRight="@+id/rbtn_readcontent_tread"
                    android:layout_below="@+id/rbtn_readcontent_tread"
                    android:layout_marginTop="-10dp"
                    android:gravity="center"
                    android:textColor="@color/colorTextNormal"
                    android:text="@string/nointeresting" />
            </RelativeLayout>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/white"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/shareTo"
                        android:textSize="@dimen/text_margin" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="25dp"
                        android:background="@color/colorTextNormal" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="35dp"
                        android:background="@android:color/white"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/iv_shareToYixin"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="12dp"
                            android:background="@drawable/circle_radius50dp"
                            android:clickable="true"
                            android:padding="15dp"
                            android:scaleType="fitCenter"
                            android:src="@mipmap/biz_news_share_yxt" />

                        <ImageView
                            android:id="@+id/iv_shareToWechatCircle"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="12dp"
                            android:layout_toRightOf="@+id/iv_shareToYixin"
                            android:background="@drawable/circle_radius50dp"
                            android:clickable="true"
                            android:padding="15dp"
                            android:scaleType="fitCenter"
                            android:src="@mipmap/night_biz_news_share_wxt" />

                        <ImageView
                            android:id="@+id/iv_shareToSina"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="12dp"
                            android:layout_toRightOf="@+id/iv_shareToWechatCircle"
                            android:background="@drawable/circle_radius50dp"
                            android:clickable="true"
                            android:padding="15dp"
                            android:scaleType="fitCenter"
                            android:src="@mipmap/biz_news_share_sina" />

                        <ImageView
                            android:id="@+id/iv_shareToMore"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="12dp"
                            android:layout_toRightOf="@+id/iv_shareToSina"
                            android:background="@drawable/circle_radius50dp"
                            android:clickable="true"
                            android:padding="15dp"
                            android:scaleType="fitCenter"
                            android:src="@mipmap/biz_news_share_more" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@+id/iv_shareToYixin"
                            android:layout_below="@+id/iv_shareToYixin"
                            android:layout_marginTop="-10dp"
                            android:gravity="right"
                            android:textColor="@color/colorTextNormal"
                            android:text="易信朋友圈" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@+id/iv_shareToWechatCircle"
                            android:layout_below="@+id/iv_shareToWechatCircle"
                            android:layout_marginTop="-10dp"
                            android:textColor="@color/colorTextNormal"
                            android:gravity="left"
                            android:singleLine="true"
                            android:text="微信朋友圈" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@+id/iv_shareToSina"
                            android:layout_alignRight="@+id/iv_shareToSina"
                            android:layout_below="@+id/iv_shareToSina"
                            android:layout_marginTop="-10dp"
                            android:gravity="center"
                            android:textColor="@color/colorTextNormal"
                            android:text="新浪微博" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@+id/iv_shareToMore"
                            android:layout_alignRight="@+id/iv_shareToMore"
                            android:layout_below="@+id/iv_shareToMore"
                            android:layout_marginTop="-10dp"
                            android:gravity="center"
                            android:textColor="@color/colorTextNormal"
                            android:text="更多" />

                    </RelativeLayout>


                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginTop="15dp"
                >
                <LinearLayout
                    android:id="@+id/ll_readcontent_relativeSys"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/aboutthis"
                        android:textColor="@color/colorWYRed"
                        android:textSize="@dimen/text_margin" />
                    <View
                        android:id="@+id/vvvvv"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorTextNormal" />

                    <com.read.view.HeightSumListView
                        android:id="@+id/lv_readcontent_relativeSys"
                        android:layout_below="@+id/vvvvv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"></com.read.view.HeightSumListView>

                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/edit_pinglun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_normal"
        android:layout_toLeftOf="@+id/textView"
        android:layout_toStartOf="@+id/textView" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_alignBaseline="@+id/editText"
        android:layout_alignParentRight="true"
        android:textSize="@dimen/text_normal"
        android:clickable="true"
        android:id="@+id/textView" />
    </RelativeLayout>

</RelativeLayout>
